@@ -1,4 +1,4 @@
-/* Copyright (C) 2000 Free Software Foundation, Inc.
+/* Copyright (C) 2000, 2009 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -25,6 +25,7 @@
 int scandir64 (__const char *__restrict __dir,
 	       struct dirent64 ***__restrict __namelist,
 	       int (*__selector) (__const struct dirent64 *),
-	       int (*__cmp) (__const void *, __const void *));
+	       int (*__cmp) (__const struct dirent64 **,
+			     __const struct dirent64 **));
 
 #include <dirent/scandir.c>
